tests/concurrency/valid/waccRoutine.wacc
begin
    int f() is 
        return 4
    end
    wacc f()
end