tests/concurrency/syntaxErr/assignWaccRoutine.wacc
begin
    int f() is
        return 4
    end
    int y = wacc f()
end